<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alimu.icecreamfinder.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:id="@+id/title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/dessertText"
        android:hint="@string/name_edit"
        android:layout_below="@+id/title" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/flavors"
        android:layout_below="@+id/dessertText"
        android:layout_alignLeft="@+id/dessertText"
        android:layout_alignStart="@+id/dessertText" />

    <!--
    <TextView
        android:text="Interested in?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_below="@+id/job_type_group"
        android:layout_toRightOf="@+id/detailsText" />
    -->

    <CheckBox
        android:text="@string/sprinkles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/job_type_group"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/checkBox3" />
    <CheckBox
        android:text="@string/hotfudge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox5"
        android:layout_below="@+id/job_type_group"
        android:layout_toRightOf="@+id/checkBox3"
        android:layout_toEndOf="@+id/checkBox3"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"/>

    <CheckBox
        android:text="@string/nuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox4"
        android:layout_below="@+id/job_type_group"
        android:layout_toRightOf="@+id/checkBox5"
        android:layout_toEndOf="@+id/checkBox5"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"/>

    <ToggleButton
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleButton"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:layout_below="@+id/checkBox4" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation='horizontal'
        android:id="@+id/job_type_group"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <RadioButton
            android:text="@string/icecream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch1"
            android:layout_alignRight="@+id/checkBox2"
            android:layout_alignEnd="@+id/checkBox2"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/radioButton"
            />

        <RadioButton
            android:text="@string/yogurt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/authorizeToggleButton"
            android:layout_alignRight="@+id/textView3"
            android:layout_alignEnd="@+id/textView3"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/radioButton2" />

        <RadioButton
            android:text="@string/gelato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/radioButton3" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/doneButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailsText"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/doneButton"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailsText"
            android:layout_marginTop="5dp"
            android:id="@+id/img"
            />
        <Button
            android:text="@string/find_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/findButton"
            android:onClick="findIceCream"
            android:layout_below="@+id/img"
            android:layout_toRightOf="@+id/detailsText"
            android:layout_toEndOf="@+id/detailsText" />
    </LinearLayout>


    <Switch
        android:text="@string/dairy_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        android:layout_alignBaseline="@+id/doneButton"
        android:layout_alignBottom="@+id/doneButton"
        android:layout_alignRight="@+id/dessertText"
        android:layout_alignEnd="@+id/dessertText" />

    <Button
    android:text="@string/done_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/doneButton"
    android:onClick="findDetails"
    android:layout_below="@+id/checkBox4"
    android:layout_toRightOf="@+id/switch1"
    android:layout_toEndOf="@+id/switch1" />
</RelativeLayout>
